--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -34,8 +34,8 @@ linux:
   icon: build/clock.png
   target:
     - AppImage
-    - snap
-    - deb
+    # - snap
+    # - deb
   maintainer: electronjs.org
   category: Utility
 appImage:
